<resources>
    <string name="app_name">HRSSC</string>

    <string name="home_page_home">首页</string>
    <string name="home_page_jifen">积分兑换</string>
    <string name="home_page_kefu">客服</string>
    <string name="home_page_my">我的</string>

    <!-- 客户热线 -->
    <string name="phone_number">400&#8211;838&#8211;9911</string>


    <!--首页模块-->
    <string name="daiwobanli_home_fragment">待我办理</string>
    <string name="shenqing_home_fragment">待我申请</string>
    <string name="btn_zhengmingbanli_home_fragment">证明办理</string>
    <string name="btn_shebao_home_fragment">社保</string>
    <string name="btn_gongjijing_home_fragment">公积金</string>
    <string name="btn_danganjieyue_home_fragment">档案借阅</string>
    <string name="btn_hukbl_home_fragment">户口办理</string>
    <string name="btn_juzhuzbl_home_fragment">居住证办理</string>
    <string name="btn_xingyg_home_fragment">新员工</string>
    <string name="btn_more_home_fragment">更多</string>
    <string name="title_last_home_fragment">最新</string>
    <string name="xzzm_bl_ZMBLActivity">薪资证明办理</string>
    <string name="jhsyzm_bl_ZMBLActivity">计划生育证明办理</string>
    <string name="xsbxzm_bl_ZMBLActivity">现实表现证明办理</string>
    <string name="zzzm_bl_ZMBLActivity">在职证明办理</string>


    <!--权限-->
    <string name="permission_dialog_title">权限拒绝</string>
    <string name="permission_dialog_ok">好</string>
    <string name="permission_dialog_cancel">拒绝</string>
    <string name="permission_rationale_location">定位需要您提供定位的权限</string>
    <string name="permission_rationale_scan">浏览图片需要您提供浏览存储的权限</string>
    <string name="permission_rationale_write_storage">保存拍照图片需要您提供写存储权限</string>

    <string name="system_is_regist">系统正在自动为您注册用户...</string>
    <string name="is_contact_customer">正在联系客服，请稍等...</string>
    <string name="is_contact_customer_failure_seconed">联系客服失败:</string>
    <string name="leave_title">留言</string>
    <string name="leave_name">姓名</string>
    <string name="leave_phone">电话</string>
    <string name="leave_email">邮箱</string>
    <string name="leave_content">内容</string>
    <string name="leave_sending">正在发送中...</string>
    <string name="register_user_fail">register user failed!</string>


    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
