<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <View
            android:id="@+id/activity_main_bottom_tab_slide_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#1cbf61" />

        <LinearLayout
            android:id="@+id/activity_main_bottom_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fafafa"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/base4dp"
            android:paddingTop="@dimen/base4dp">

            <RelativeLayout
                android:id="@+id/activity_main_bottom_tab_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/activity_main_bottom_tab_icon"
                    style="@style/activity_main_bottom_tab_icon_style"
                    android:src="@drawable/activity_main_bottom_tab_home_selector" />

                <TextView
                    android:id="@+id/activity_main_bottom_tab_text"
                    style="@style/activity_main_bottom_tab_text_style"
                    android:text="@string/home_page_home" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_main_bottom_tab_jifen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@id/activity_main_bottom_tab_icon"
                    style="@style/activity_main_bottom_tab_icon_style"
                    android:src="@drawable/activity_main_bottom_tab_jifen_selector" />

                <TextView
                    android:id="@id/activity_main_bottom_tab_text"
                    style="@style/activity_main_bottom_tab_text_style"
                    android:text="@string/home_page_jifen" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_main_bottom_tab_kefu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@id/activity_main_bottom_tab_icon"
                    style="@style/activity_main_bottom_tab_icon_style"
                    android:src="@drawable/activity_main_bottom_tab_kefu_selector" />

                <TextView
                    android:id="@id/activity_main_bottom_tab_text"
                    style="@style/activity_main_bottom_tab_text_style"
                    android:text="@string/home_page_kefu" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_main_bottom_tab_my"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@id/activity_main_bottom_tab_icon"
                    style="@style/activity_main_bottom_tab_icon_style"
                    android:src="@drawable/activity_main_bottom_tab_my_selector" />

                <TextView
                    android:id="@id/activity_main_bottom_tab_text"
                    style="@style/activity_main_bottom_tab_text_style"
                    android:text="@string/home_page_my" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/divide_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/activity_main_bottom_bar"
        android:background="#b2b2b2" />

    <com.maiyu.hrssc.base.view.CustomViewPager
        android:id="@+id/activity_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/divide_line" />

</RelativeLayout>